[package]
name = "stock_market_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rust_decimal = "1.26.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
yahoo_finance_api = { version = "1.3.0", features = ["blocking"] }
